--- a/src/components/UserItem/UserItem.scss
+++ b/src/components/UserItem/UserItem.scss
@@ -2,6 +2,13 @@
   display: flex;
   align-items: center;
   width: fit-content;
+  border: none;
+  background: none;
+  padding: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  text-align: left;
 }
 
 .userItem-avatar {
